2010-04-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Try and handle errors.

2010-04-21  Jan Djärv  <jan.h.d@swipnet.se>

	* vc-dir.el (vc-dir-tool-bar-map): Add :label on some tool bar items.

	* tool-bar.el (tool-bar-setup): Add :label on some tool bar items.

	* loadup.el: Load dynamic-setting.el if feature dynamic-setting
	is present.

	* info.el (info-tool-bar-map): Add labels.

	* cus-start.el (all): Add tool-bar-style and tool-bar-max-label-size.

	* cus-edit.el (custom-commands): Add labels for tool bar.
	(custom-buffer-create-internal, Custom-mode): Adjust for
	labels in custom-commands.

	* dynamic-setting.el: Renamed from font-setting.el.

2010-04-21  John Wiegley  <jwiegley@gmail.com>

	* ido.el (ido-init-completion-maps): For ido-switch-buffer, C-o
	toggles the use of virtual buffers.
	(ido-buffer-internal): Guard `ido-use-virtual-buffers' global
	value.
	(ido-toggle-virtual-buffers): New function.

2010-04-21  Juanma Barranquero  <lekktu@gmail.com>

	Use `define-derived-mode'; fix window selection; doc fixes.
	* play/tetris.el (tetris, tetris-update-speed-function)
	(tetris-tty-colors, tetris-x-colors, tetris-move-bottom)
	(tetris-move-left, tetris-move-right, tetris-rotate-prev)
	(tetris-rotate-next, tetris-end-game, tetris-start-game)
	(tetris-pause-game): Fix typos in docstrings.
	(tetris-mode-map, tetris-null-map):
	Move initialization into declaration.
	(tetris-mode): Define with `define-derived-mode';
	set show-trailing-whitespace to nil.
	(tetris): Prefer window already displaying the "*Tetris*" buffer.

2010-04-21  Karel Klíč  <kklic@redhat.com>

	* files.el (backup-buffer): Handle SELinux context, and return it
	if a backup was made by renaming.
	(backup-buffer-copy): Set SELinux context to the target file.
	(basic-save-buffer): Set SELinux context of the newly written file.
	(basic-save-buffer-1): Now it also returns any SELinux context.